MH: implement player service in game service, adjust tests and tests description