@@ -10,6 +10,7 @@ import htw.kbe.maumau.game.domain.Game;
 import htw.kbe.maumau.game.exceptions.InvalidPlayerSizeException;
 import htw.kbe.maumau.game.fixtures.GameFixture;
 import htw.kbe.maumau.player.domain.Player;
+import htw.kbe.maumau.player.service.PlayerService;
 import htw.kbe.maumau.rule.exceptions.PlayedCardIsInvalidException;
 import htw.kbe.maumau.rule.service.RulesService;
 import org.junit.jupiter.api.BeforeEach;
@@ -34,27 +35,31 @@ public class GameServiceTest {
     private DeckService deckService;
     private RulesService rulesService;
     private CardService cardService;
+    private PlayerService playerService;
 
     private List<Player> players;
     private Game game;
 
     @BeforeEach
-    public void setUp() throws IllegalDeckSizeException {
+    public void setUp() {
         service = new GameServiceImpl();
         deckService = mock(DeckService.class);
         rulesService = mock(RulesService.class);
         cardService = mock(CardService.class);
+        playerService = mock(PlayerService.class);
         service.setCardService(cardService);
         service.setDeckService(deckService);
         service.setRulesService(rulesService);
+        service.setPlayerService(playerService);
         players = GameFixture.players();
         game = GameFixture.game();
-        when(deckService.createDeck(anyList())).thenReturn(GameFixture.deck());
     }
 
     @Test
     @DisplayName("should return a new instance of game with Cards and the player list")
     public void testCreateValidGame() throws IllegalDeckSizeException, InvalidPlayerSizeException {
+        when(deckService.createDeck(anyList())).thenReturn(GameFixture.deck());
+
         Game game = service.startNewGame(players);
 
         assertEquals(players, game.getPlayers());
@@ -66,7 +71,9 @@ public class GameServiceTest {
 
     @Test
     @DisplayName("should throw exception when player list size is smaller than two")
-    public void throwExceptionPlayerSizeIsTooLow() {
+    public void throwExceptionPlayerSizeIsTooLow() throws IllegalDeckSizeException {
+        when(deckService.createDeck(anyList())).thenReturn(GameFixture.deck());
+
         Exception e = assertThrows(InvalidPlayerSizeException.class, () -> {
             service.startNewGame(players.subList(0, 1));
         });
@@ -74,7 +81,8 @@ public class GameServiceTest {
 
     @Test
     @DisplayName("should throw exception when player list size is higher than four")
-    public void throwExceptionPlayerSizeIsTooHigh() {
+    public void throwExceptionPlayerSizeIsTooHigh() throws IllegalDeckSizeException {
+        when(deckService.createDeck(anyList())).thenReturn(GameFixture.deck());
         players.add(players.get(0));
 
         Exception e = assertThrows(InvalidPlayerSizeException.class, () -> {
@@ -143,7 +151,7 @@ public class GameServiceTest {
     }
 
     @Test
-    @DisplayName("should apply rules")
+    @DisplayName("should apply jack on jack rule")
     public void applyIsCardJackRule() {
         Card topCard = new Card(Suit.CLUBS, Label.JACK);
         game.getCardDeck().setTopCard(topCard);
@@ -156,7 +164,7 @@ public class GameServiceTest {
     }
 
     @Test
-    @DisplayName("should apply rules")
+    @DisplayName("should apply suspended rule")
     public void applyPlayerMustSuspendRule() {
         Card topCard = new Card(Suit.CLUBS, Label.JACK);
         game.getCardDeck().setTopCard(topCard);
@@ -173,7 +181,7 @@ public class GameServiceTest {
     }
 
     @Test
-    @DisplayName("should apply rules")
+    @DisplayName("should apply change game direction rule")
     public void applyChangeGameDirectionRule() {
         Card topCard = new Card(Suit.CLUBS, Label.JACK);
         game.getCardDeck().setTopCard(topCard);
@@ -186,7 +194,7 @@ public class GameServiceTest {
     }
 
     @Test
-    @DisplayName("should apply rules")
+    @DisplayName("should apply draw two cards rule")
     public void applyDrawTwoCardsRule() {
         Card topCard = new Card(Suit.CLUBS, Label.JACK);
         game.getCardDeck().setTopCard(topCard);
@@ -199,24 +207,28 @@ public class GameServiceTest {
     }
 
     @Test
-    @DisplayName("should apply rules")
+    @DisplayName("should apply 'mau' is invalid rule")
     public void applyIsMauInvalidRule() {
         Player activePlayer = players.get(0);
         activePlayer.setHandCards(new ArrayList<>(List.of(new Card(Suit.CLUBS, Label.SEVEN))));
         game.setActivePlayer(activePlayer);
+        List<Card> drawnCards = List.of(new Card(Suit.DIAMONDS, Label.JACK), new Card(Suit.CLUBS, Label.EIGHT));
         when(rulesService.isPlayersMauInvalid(any())).thenReturn(true);
         when(rulesService.getNumberOfDrawnCards()).thenReturn(2);
-        when(deckService.getCardsFromDrawPile(any(), anyInt())).thenReturn(
-                List.of(new Card(Suit.DIAMONDS, Label.JACK), new Card(Suit.CLUBS, Label.EIGHT)));
+        when(deckService.getCardsFromDrawPile(any(), anyInt())).thenReturn(drawnCards);
+        doNothing().when(playerService).drawCards(any(), anyList());
 
         service.applyCardRule(game);
 
-        assertEquals(3, game.getActivePlayer().getHandCards().size());
         verify(rulesService).isPlayersMauInvalid(argThat(player -> player.equals(activePlayer)));
         verify(rulesService, times(1)).getNumberOfDrawnCards();
         verify(deckService).getCardsFromDrawPile(
                 argThat(deck -> deck.equals(game.getCardDeck())),
                 intThat(numberOfDrawnCards -> numberOfDrawnCards == 2));
+        verify(playerService, times(1)).drawCards(argThat(
+                        player -> player.equals(activePlayer)),
+                argThat(cards -> cards.equals(drawnCards))
+        );
     }
 
     @Test
@@ -276,34 +288,42 @@ public class GameServiceTest {
     }
 
     @Test
-    @DisplayName("should add drawn cards from discard pile to player's hand cards")
+    @DisplayName("should add drawn cards from discard pile to players hand cards")
     public void dealCardsToPlayer() {
         Player activePlayer = players.get(0);
         game.setActivePlayer(activePlayer);
-        activePlayer.setHandCards(GameFixture.cards().subList(0, 5));
-        when(deckService.getCardsFromDrawPile(any(), anyInt())).thenReturn(Arrays.asList(new Card(Suit.SPADES, Label.SEVEN), new Card(Suit.CLUBS, Label.EIGHT)));
+        List<Card> drawnCards = List.of(new Card(Suit.SPADES, Label.SEVEN), new Card(Suit.CLUBS, Label.EIGHT));
+        when(deckService.getCardsFromDrawPile(any(), anyInt())).thenReturn(drawnCards);
+        doNothing().when(playerService).drawCards(any(), anyList());
 
         service.drawCards(2, game);
 
-        assertEquals(7, game.getActivePlayer().getHandCards().size());
+        verify(deckService, times(1)).getCardsFromDrawPile(argThat(
+                        deck -> deck.equals(game.getCardDeck())),
+                intThat(numberOfDrawnCards -> numberOfDrawnCards == 2)
+        );
+        verify(playerService, times(1)).drawCards(argThat(
+                        player -> player.equals(activePlayer)),
+                argThat(cards -> cards.equals(drawnCards))
+        );
     }
 
     @Test
-    @DisplayName("should return true if the Player does have the card in hand")
+    @DisplayName("should return true if the player does have the card in hand")
     public void hasPlayerHandCard() {
         assertTrue(true);
     }
 
     @Test
-    @DisplayName("should set initial hand cards to player")
+    @DisplayName("should call 'initialCardDealing' and call 'drawCards' for each player in game")
     public void shouldDrawInitialHandCards() {
         when(deckService.initialCardDealing(any())).thenReturn(GameFixture.cards().subList(0, 5));
+        doNothing().when(playerService).drawCards(any(), anyList());
 
         service.initialCardDealing(game);
 
-        for (Player player : game.getPlayers()) {
-            assertEquals(5, player.getHandCards().size());
-        }
+        verify(deckService, times(4)).initialCardDealing(any());
+        verify(playerService, times(4)).drawCards(any(), anyList());
     }
 
     @Test
